--- a/scinext_screening.ipynb
+++ b/scinext_screening.ipynb
@@ -3783,6 +3783,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Install libraries**"
+      ],
+      "metadata": {
+        "id": "r4jVxoTrStan"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install sentence-transformers scipy\n",
@@ -3796,7 +3805,7 @@
         "outputId": "51acc536-0fbf-4353-add5-9793c1912a49",
         "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3992,7 +4001,7 @@
         "outputId": "31f9fe3d-e7dd-442a-fb15-55a55db342c8",
         "collapsed": true
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4165,8 +4174,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Read the dataset**"
+      ],
+      "metadata": {
+        "id": "TIlP9QAnS0Nr"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4191,6 +4209,15 @@
         "\n",
         "print(len(df))\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 1: Find the relevant papers"
+      ],
+      "metadata": {
+        "id": "AGpxmp5GS3Fe"
+      }
     },
     {
       "cell_type": "code",
@@ -4235,7 +4262,7 @@
         "outputId": "23dd2892-936b-464a-87d4-bac99536059d",
         "collapsed": true
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4245,6 +4272,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 2: Classify the relevant papers into mentioned categories"
+      ],
+      "metadata": {
+        "id": "h_I4LxgqS7-l"
+      }
     },
     {
       "cell_type": "code",
@@ -4290,7 +4326,7 @@
         "id": "Y4OjdB7hXwFr",
         "outputId": "a4cac047-f2d3-465c-94db-98f8dfe7c697"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4303,6 +4339,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 3: Extract and report the name of the scientific method used in the relevant paper"
+      ],
+      "metadata": {
+        "id": "2SbThzWgTFAQ"
+      }
     },
     {
       "cell_type": "code",
@@ -4343,7 +4388,7 @@
         "id": "pqLvfUX0G0z9",
         "outputId": "c8f4f33c-d009-4fe4-8076-3029fab1bf26"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4459,7 +4504,7 @@
         "outputId": "0286a3d2-dcc9-4fe2-fb91-a3f2fc3e2b58",
         "collapsed": true
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4503,7 +4548,7 @@
         "id": "lgU-lAewqk0I",
         "outputId": "c792865b-57ec-4961-d763-6e2b42c97bf9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4563,6 +4608,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Plot the frequency label"
+      ],
+      "metadata": {
+        "id": "U655KJMaTwUz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -4587,7 +4641,7 @@
         },
         "outputId": "43f6d10a-3f4a-415a-cbe0-c8689c3c6c89"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
